create auth folder and initialize its init file

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,10 +16,10 @@
     <link rel="icon" type="image/png" href="{{ url_for('static',filename='img/favicon.png')}}">
 
     {% if title %}
-    <title>Newpress - {{ title }}</title>
+    <title>THA TECH STREETS - {{ title }}</title>
     {% else %}
     <title>
-        Newpress - Welcome
+      WElcome to THA TECH STREETS!
     </title>
     {% endif %}
 </head>
