--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,55 +1,27 @@
-<!doctype html>
-<html lang="en">
+{% extends 'bootstrap/base.html'%}
 
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- style block -->
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="{{ url_for('static',filename='css/styles.css')}}">
-    <link rel="icon" type="image/png" href="{{ url_for('static',filename='img/favicon.png')}}">
+{% block styles %}
 
-    {% if title %}
-    <title>THA TECH STREETS - {{ title }}</title>
-    {% else %}
-    <title>
-      WElcome to THA TECH STREETS!
-    </title>
-    {% endif %}
-</head>
+{{ super() }}
 
-<body>
+    <!-- Bootstrap core CSS -->
+    <link href="{{ url_for('static', filename='bootstrap.min.css') }}" rel="stylesheet">
 
-    <!-- include navbar -->
-    {% block navbar %}
+    <!-- Custom fonts for this template -->
+    <link href="{{ url_for('static', filename='font-awesome.min.css') }}" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+
+    <!-- Custom styles for this template -->
+    <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
+
+{% endblock %}
+
+<!-- content block -->
+
+<!-- Navbar block  --> 
+{% block navbar %}
     {% include 'navbar.html' %}
-    {% endblock %}
-
-
-    <!-- content section -->
-    {% block content %}
-
-    {% endblock %}
-
-    {% block footer %}
-    {% include 'footer.html' %}
-    {% endblock %}
-    <!-- jquery -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <!-- bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
-        crossorigin="anonymous"></script>
-    <!-- ckeditor -->
-    <script src="//cdn.ckeditor.com/4.11.1/standard/ckeditor.js"></script>
-    <!-- main scripts -->
-
-</body>
-
-</html>
+{% endblock %}
