update profile.html layout

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,7 +1,7 @@
-<!--Landing page section-->
+<!--nav-section-->
 <section class="header">
   <nav class="navbar navbar-expand-lg navbar-transparent bg-transparent fs-14">
-    <a class="nav-logo" href="/"><strong>Tha Tech Streets</strong></a>
+    <a class="nav-logo" href="/"><strong>EARTHLINGS</strong></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
