--- a/app/templates/blog_posts.html
+++ b/app/templates/blog_posts.html
@@ -1,2 +1,54 @@
+{% extends "base.html" %}
+{% import 'macros.html' as macro%}
 
+{% block content %}
 
+<section class="blog-section">
+    <div class="top-header-container bg-light">
+        <div class="row">
+            <div class="col-md-12 text-center p-5">
+                <h3 class="headings text-uppercase text-underline">
+                    Blog Posts <br>
+                    {{ category.name }}
+                </h3>
+            </div>
+        </div>
+    </div>
+    <div class="container mt-2">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="row">
+                    {% for post in posts %}
+                    <div class="col-md-4">
+                        <div class="card mb-4 post-card">
+                            {% if post.image_path %}
+                            <img src="{{ post.image_path }}" class="card-img-top" alt="{{ post.category.name }}">
+                            {% else %}
+                            <img class="card-img-top" src="https://www.freeiconspng.com/uploads/no-image-icon-11.PNG" alt="{{ post.title }}">
+                            {% endif %}
+                            <div class="card-body text-center">
+                                <a href="{{ url_for('main.single_post',id=post.id)}}">
+                                    <h6 class="fade-item">{{ post.category.name }}</h6>
+                                    <h5 class="">{{ post.title }}</h5>
+                                    <small>
+                                        <div class="d-flex justify-content-around">
+                                            <div>
+                                                <p><i class="fa fa-user"></i> {{ post.user.username }}</p>
+                                            </div>
+                                            <div><p><i class="fa fa-clock"></i> {{ post.created_at.strftime('%d %b %Y')
+                                           }}</p>                                                                                          
+                                            </div>
+                                        </div>
+                                    </small>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+{% endblock %}
