update single-post template

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -33,15 +33,10 @@
                                   <small>
                                       <div class="d-flex justify-content-around">
                                           <div>
-                                              <p>
-                                                  <i class="fa fa-user"></i> {{ post.user.username }}
-                                              </p>
+                                              <p> <i class="fa fa-user"></i> {{ post.user.username }}</p>
                                           </div>
                                           <div>
-                                              <p>
-                                                  <i class="fa fa-clock"></i> {{ post.created_at.strftime('%d %b %Y')
-                                                  }}
-                                              </p>
+                                              <p><i class="fa fa-clock"></i> {{ post.created_at.strftime('%d %b %Y')}}</p>
                                           </div>
                                       </div>
                                   </small>
