--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,51 +1,47 @@
-<!--nav-section-->
-<section class="header">
-  <nav class="navbar navbar-expand-lg navbar-transparent bg-transparent fs-14">
-    <a class="nav-logo" href="/"><strong>EARTHLINGS</strong></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="/">HOME <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="{{ url_for('main.filter_posts',id=1) }}" id="navbarDropdownMenuLink">
-            ABOUT
-          </a>
-        </li>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="{{ url_for('main.filter_posts',id=2) }}" id="navbarDropdownMenuLink">
-            ART
-          </a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="{{ url_for('main.filter_posts',id=3) }}" id="navbarDropdownMenuLink">
-            ARCHITECTURE
-          </a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="{{ url_for('main.filter_posts',id=4) }}">LIFESTYLE</a>
-        </li>
-        {% if current_user.is_authenticated  %}
-            <li class="nav-item dropdown ">
-              <a class="nav-link dropdown-toggle btn btn-outline-danger" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> {{current_user.username}} </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item text-dark"
-                  href="{{ url_for('main.profile', username=current_user.username)}}">My account</a></li>
-                  <li><a class="dropdown-item text-dark" href="{{ url_for('auth.logout') }}">Logout</a></li>
-              </ul>
-            </li>
-            {% else %}
-            <li class="nav-item">
-              <a class="btn color-primary" href="{{ url_for('auth.login')}}">Login</a>
-            </li>
-          {% endif %}
-      </ul>
-    </div>
-  </nav>
-</section>
-
-    
+<nav class="navbar navbar-expand-lg">
+  <div class="container container-fluid">
+      <a class="navbar-brand" href="/">
+          Earthlings
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+          <i class="fa fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          </ul>
+          <ul class="navbar-nav nav-right">
+              <li class="nav-item">
+                  <a class="nav-link active" href="{{ url_for('main.filter_posts',id=1) }}">Art</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="{{ url_for('main.filter_posts',id=2) }}">Literature</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="{{ url_for('main.filter_posts',id=3) }}">Lifestyle</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="{{ url_for('main.filter_posts',id=4) }}">Architecture</a>
+              </li>
+              {% if current_user.is_authenticated %}
+              <li class="nav-item dropdown ">
+                  <a class="nav-link dropdown-toggle btn btn-outline-danger" href="#" id="navbarDropdown"
+                      role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      {{current_user.username}}
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item text-dark"
+                              href="{{ url_for('main.profile', username=current_user.username)}}">My account</a></li>
+                      <li><a class="dropdown-item text-dark" href="{{ url_for('auth.logout') }}">Logout</a></li>
+                  </ul>
+              </li>
+              {% else %}
+              <li class="nav-item">
+                  <a class="btn color-primary" href="{{ url_for('auth.login')}}">sign in</a>
+              </li>
+              {%endif%}
+          </ul>
+      </div>
+  </div>
+</nav>
