update changes in models and upgrade db

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,10 +3,10 @@
   <head>
     
     {% if title %}
-    <title>Earthlings  {{ title }}</title>
+    <title>ThaSeeker  {{ title }}</title>
     {% else %}
     <title>
-        Greetings Earthlings 
+        ThaSeeker 
     </title>
     {% endif %}
     <!-- Required meta tags -->
