--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -52,8 +52,8 @@
 .navbar-brand {
   color: white;
   font-family: 'Fredoka One', cursive;
-  text-transform: uppercase;
-  font-size: 16px;
+  /* text-transform: uppercase; */
+  font-size: 26px;
 }
 /* .nav-link:hover{
   color: var(--main-color);
@@ -122,7 +122,7 @@
 
 /* homepage */
 .homepage {
-  background-image: url("../img/bck2.jpg");
+  background-image: url("../img/bck5.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -261,7 +261,7 @@
   font-weight: 300;
   line-height: 30px;
   font-size: 18px;
-  color: #757575;
+  /* color: #757575; */
 }
 
 /* side post */
