--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg">
   <div class="container container-fluid">
       <a class="navbar-brand" href="/">
-          Earthlings
+          ThaSeeker
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
