--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% import 'boostrap/wtf.html' as wtf %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
 {% block content %}
 
@@ -90,7 +90,7 @@
             </div>
           </div>
           <div class="card-body">
-            {% include 'includes/posts.html' %}
+            {% include 'details/posts.html' %}
           </div>
         </div>
       </div>
@@ -105,7 +105,7 @@
             </div>
           </div>
           <div class="card-body">
-            {% include 'includes/comments.html' %}
+            {% include 'details/comments.html' %}
           </div>
         </div>
       </div>
